# Fuzzer

./: Cargo.toml  README.md
src/: main.rs  test_wordlist.txt
