[package]
name = "Fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11", features = ["json", "gzip", "brotli", "cookies", "rustls-tls"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
