[package]
name = "Fuzzer"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = {version = "0.11", features = ["json", "gzip", "brotli", "cookies", "rustls-tls"]}
tokio = {version = "1", features = ["rt-multi-thread", "macros"]}
futures = "0.3"
clap = { version = "4.5.51", features = ["derive"] }
colored = "2.1"
